# ouroboros

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  PROJECT.md  README.md  og-prompt.md  pyproject.toml
ouroboros/: __init__.py  config.py  main.py
ouroboros/cluster/: __init__.py  state.py
ouroboros/core/: __init__.py  llm.py
ouroboros/eval/: __init__.py  harness.py
ouroboros/finetune/: __init__.py  pipeline.py
ouroboros/gateway/: __init__.py  service.py
ouroboros/guard/: __init__.py  tool_guard.py
ouroboros/infra/: __init__.py
ouroboros/knowledge/: __init__.py  ingest.py  store.py
ouroboros/ui/: __init__.py
tests/: test_api_integration.py  test_cluster.py  test_guard.py  test_llm_provider.py
