[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ouroboros"
version = "0.1.0"
description = "Raft-inspired domain self-improving LLM system"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ouroboros Contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "PyJWT>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ouroboros*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
